--- a/package.json
+++ b/package.json
@@ -2,5 +2,8 @@
   "dependencies": {
     "eslint": "^8.36.0",
     "minimist": "^1.2.8"
+  },
+  "devDependencies": {
+    "jest": "^29.5.0"
   }
 }
