--- a/package.json
+++ b/package.json
@@ -1,16 +1,20 @@
 {
   "dependencies": {
-    "eslint": "^8.36.0",
     "minimist": "^1.2.8"
   },
   "devDependencies": {
-    "jest": "^29.5.0"
+    "eslint": "^8.36.0",
+    "husky": "^8.0.3",
+    "jest": "^29.5.0",
+    "lint-staged": "^13.2.0",
+    "prettier": "^2.8.7"
   },
   "name": "wd201",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "prepare": "cd .. && husky install todo-cli/.husky"
   },
   "repository": {
     "type": "git",
