--- a/todo-cli/package.json
+++ b/todo-cli/package.json
@@ -1,7 +1,6 @@
 {
   "name": "todo-cli",
   "version": "1.0.0",
-  "description": "",
   "main": "todo.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -10,10 +9,14 @@
   "author": "Chandra kanth <gobburichandrakanth7656@gmail.com>",
   "license": "ISC",
   "dependencies": {
-    "jest": "^29.5.0"
+    "jest": "^29.5.0",
+    "pg": "^8.10.0",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.30.0"
   },
   "devDependencies": {
     "eslint": "^8.36.0",
     "husky": "^8.0.3"
-  }
+  },
+  "description": ""
 }
