--- a/todo-cli/package.json
+++ b/todo-cli/package.json
@@ -16,7 +16,8 @@
   },
   "devDependencies": {
     "eslint": "^8.36.0",
-    "husky": "^8.0.3"
+    "husky": "^8.0.3",
+    "sequelize-cli": "^6.6.0"
   },
   "description": ""
 }
