--- a/todo-app/package.json
+++ b/todo-app/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "pretest": "NODE_ENV=test npx sequelize-cli db:drop && NODE_ENV=test npx sequelize-cli db:create",
+    "test": "NODE_ENV=test jest --detectOpenHandles",
+    "prepare": "husky install"
   },
   "author": "Chandra kanth <gobburichandrakanth7656@gmail.com>",
   "license": "ISC",
@@ -14,6 +16,8 @@
     "sequelize": "^6.30.0"
   },
   "devDependencies": {
-    "sequelize-cli": "^6.6.0"
+    "jest": "^29.5.0",
+    "sequelize-cli": "^6.6.0",
+    "supertest": "^6.3.3"
   }
 }
