--- a/todo-cli/config/config.json
+++ b/todo-cli/config/config.json
@@ -4,14 +4,16 @@
     "password": "nani",
     "database": "todo_db_dev",
     "host": "127.0.0.1",
-    "dialect": "postgres"
+    "dialect": "postgres",
+    "logging":false
   },
   "test": {
     "username": "postgres",
     "password": "nani",
     "database": "todo_db_test",
     "host": "127.0.0.1",
-    "dialect": "postgres"
+    "dialect": "postgres",
+    "looging":false
   },
   
   "production": {
@@ -19,6 +21,7 @@
     "password": "nani",
     "database": "todo_db_prod",
     "host": "127.0.0.1",
-    "dialect": "postgres"
+    "dialect": "postgres",
+    "looging":false
   }
 }
