--- a/todo-app/config/config.json
+++ b/todo-app/config/config.json
@@ -7,17 +7,14 @@
     "dialect": "postgres"
   },
   "test": {
-    "username": "root",
+    "username": "postgres",
     "password": "nani",
-    "database": "database_test",
+    "database": "wd-todo-test",
     "host": "127.0.0.1",
-    "dialect": "mysql"
+    "dialect": "postgres"
   },
   "production": {
-    "username": "root",
-    "password": "nani",
-    "database": "database_production",
-    "host": "127.0.0.1",
-    "dialect": "mysql"
+    "use_env_variable":"DATABASE_URL",
+    "dialect": "postgres"
   }
-}
+} 
