--- a/todo-app/package.json
+++ b/todo-app/package.json
@@ -3,12 +3,11 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  
   "scripts": {
     "pretest": "NODE_ENV=test npx sequelize-cli db:drop && NODE_ENV=test npx sequelize-cli db:create",
     "test": "NODE_ENV=test jest --detectOpenHandles",
     "prepare": "cd .. && husky install todo-app/.husky",
-    "start" : "node index.js"
+    "start": "node index.js"
   },
   "author": "Chandra kanth <gobburichandrakanth7656@gmail.com>",
   "license": "ISC",
@@ -18,6 +17,7 @@
     "sequelize": "^6.30.0"
   },
   "devDependencies": {
+    "eslint": "^8.38.0",
     "husky": "^8.0.3",
     "jest": "^29.5.0",
     "sequelize-cli": "^6.6.0",
