--- a/todo-app/package.json
+++ b/todo-app/package.json
@@ -16,8 +16,11 @@
     "pg": "^8.10.0",
     "sequelize": "^6.30.0"
   },
-  "lint-staged":{
-    "**/*":"prettier --write --ignore-unknown"
+  "lint-staged": {
+   "*.js":[
+    "eslint",
+    "prettier --write ."
+   ]
   },
   "devDependencies": {
     "eslint": "^8.38.0",
