--- a/todo-app/package.json
+++ b/todo-app/package.json
@@ -14,18 +14,21 @@
   "dependencies": {
     "express": "^4.18.2",
     "pg": "^8.10.0",
+    "pg-hstore": "^2.3.4",
+    
     "sequelize": "^6.30.0"
   },
   "lint-staged": {
-   "*.js":[
-    "eslint",
-    "prettier --write ."
-   ]
+    "*.js": [
+      "eslint",
+      "prettier --write ."
+    ]
   },
   "devDependencies": {
     "eslint": "^8.38.0",
     "husky": "^8.0.3",
     "jest": "^29.5.0",
+    "prettier": "^2.8.7",
     "sequelize-cli": "^6.6.0",
     "supertest": "^6.3.3"
   }
