--- a/todo-app/package.json
+++ b/todo-app/package.json
@@ -7,15 +7,16 @@
     "pretest": "NODE_ENV=test npx sequelize-cli db:drop && NODE_ENV=test npx sequelize-cli db:create",
     "test": "NODE_ENV=test jest --detectOpenHandles",
     "prepare": "cd .. && husky install todo-app/.husky",
-    "start": "node index.js"
+    "start": "nodemon -e js ,ejs",
+    "start:prod":"node index.js"
   },
   "author": "Chandra kanth <gobburichandrakanth7656@gmail.com>",
   "license": "ISC",
   "dependencies": {
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
     "pg": "^8.10.0",
     "pg-hstore": "^2.3.4",
-    
     "sequelize": "^6.30.0"
   },
   "lint-staged": {
@@ -28,6 +29,7 @@
     "eslint": "^8.38.0",
     "husky": "^8.0.3",
     "jest": "^29.5.0",
+    "nodemon": "^2.0.22",
     "prettier": "^2.8.7",
     "sequelize-cli": "^6.6.0",
     "supertest": "^6.3.3"
