--- a/todo-app/.eslintrc.json
+++ b/todo-app/.eslintrc.json
@@ -1,17 +1,15 @@
 {
-    "env": {
-        "commonjs": true,
-        "es2021": true,
-        "browser": true,
-        "jest" : true
-    },
-    "extends": "eslint:recommended",
-    "overrides": [
-    ],
-    "parserOptions": {
-        "ecmaVersion": "latest",
-        "sourceType": "module"
-    },
-    "rules": {
-    }
+  "env": {
+    "commonjs": true,
+    "es2021": true,
+    "browser": true,
+    "jest": true
+  },
+  "extends": "eslint:recommended",
+  "overrides": [],
+  "parserOptions": {
+    "ecmaVersion": "latest",
+    "sourceType": "module"
+  },
+  "rules": {}
 }
