--- a/hello-world/package.json
+++ b/hello-world/package.json
@@ -6,9 +6,17 @@
   "dependencies": {
     "minimist": "^1.2.8"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "eslint": "^8.40.0",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-n": "^15.7.0",
+    "eslint-plugin-promise": "^6.1.1"
+  },
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "start": "index.js"
+
   },
   "author": "Chandra kanth <gobburichandrakanth7656@gmail.com>",
   "license": "ISC"
