--- a/http-server/package.json
+++ b/http-server/package.json
@@ -6,7 +6,13 @@
   "dependencies": {
     "minimist": "^1.2.8"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "eslint": "^8.40.0",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-n": "^15.7.0",
+    "eslint-plugin-promise": "^6.1.1"
+  },
   "scripts": {
     "start": "index.js",
     "test": "jest"
