--- a/todo-app/package.json
+++ b/todo-app/package.json
@@ -13,6 +13,8 @@
   "author": "Chandra kanth <gobburichandrakanth7656@gmail.com>",
   "license": "ISC",
   "dependencies": {
+    "cookie-parser": "^1.4.6",
+    "csurf": "^1.11.0",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "pg": "^8.10.0",
@@ -26,6 +28,7 @@
     ]
   },
   "devDependencies": {
+    "cheerio": "^1.0.0-rc.12",
     "eslint": "^8.38.0",
     "husky": "^8.0.3",
     "jest": "^29.5.0",
