--- a/todo-app/package.json
+++ b/todo-app/package.json
@@ -13,6 +13,7 @@
   "author": "Chandra kanth <gobburichandrakanth7656@gmail.com>",
   "license": "ISC",
   "dependencies": {
+    "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.6",
     "csurf": "^1.11.0",
     "ejs": "^3.1.9",
